maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estFaceMur) {flag = true}
                              ^